welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:32: error: not found: value c
					faireV(c)
                                               ^MethodsPicture:44: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
				Motif()
                                     ^MethodsPicture:56: error: not found: value faireV
faireV(Color.YELLOW)
^MethodsPicture:57: error: not found: value faireV
faireV(Color.RED)
^MethodsPicture:58: error: not found: value faireV
faireV(Color.BLUE)
^MethodsPicture:59: error: not found: value faireV
faireV(Color.GREEN)
^MethodsPicture:38: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime82.MethodsPicture'
override def run()
             ^